--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
       display: none
     }
   </style>
-  <script type="module" crossorigin src="/assets/index.dd5d8649.js"></script>
-  <link rel="stylesheet" href="/assets/index.48104188.css">
+  <script type="module" crossorigin src="/random-profile/assets/index.dd5d8649.js"></script>
+  <link rel="stylesheet" href="/random-profile/assets/index.48104188.css">
 </head>
 
 <body>
